Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}

2.002003  2010-09-16 10:44:40 Europe/Vienna

- Added REST and RPC delete_bulk tests
- Fixed RPC delete_bulk not working at all
- Added REST and RPC update_bulk tests
- Removed useless RPC index action
- Fixed static configured page attribute not being used (RT#56226)
- Test use_json_boolean true
- Fixed search attribute generation for nonexistent relationships
- Remove trailing newlines from error messages

2.002002  2010-08-03 14:40:50 Europe/Vienna

- Fixed search for related columns overwriting existing params in generate_column_parameters
- Use column accessor for updating an existing object instead of passing the new values to update.
  This enables the column accessors to do additional work (for example with method modifiers).
- Fixed t/rpc/list.t error message regex to pass with Moose version >=1.05
- Fixed pod coverage and added a test for it

2.002001  2010-04-01 01:41:11 Europe/Berlin

- Remove debugging code and other noise from tests
- Fixed some typos and code cleanups
- Added possibility to fetch a single object by id + tests using 'item'
- Added item_root attribute which defaults to 'data' and is used as data root for 'item'
- Break out bulk actions into their own methods for RPC
- Restore identifer vs. no identifer for REST chains
- Chain dispatching has now been fixed to not be as hackish as before
- Shift around where the current result set is set. setup() now does /nothing/ by default other than be a chain anchor
- Tests added for updating related keys via REST
- generate_rs is now used to get the default resultset inside inflate_request
- No longer uses Catalyst::Action::REST to do dispatching instead uses ActionRole and MatchRequestMethod
- PLEASE THOROUGHLY TEST AS SOME BEHAVIOR MAY HAVE BEEN ALTERED SUBTLY WHEN DEALING WITH BULK vs SINGLE ACTIONS

2.001003  2010-02-12 19:01:56 America/Chicago
